# mis-final

./: .gitignore  CMakeLists.txt
fault_injection/: trigger.c  trigger.h
main/: CMakeLists.txt  main.c
targets/advanced01_early_exit/: advanced01_early_exit.h  unprotected.c
targets/advanced02_nested_decisions/: advanced02_nested_decisions.h  unprotected.c
targets/anti_rollback/: anti_rollback.h  unprotected.c
targets/basic01_linear/: protected.c  unprotected.c
targets/basic01_single_branch/: unprotected.c
targets/basic02_single_branch/: basic02_single_branch.h  unprotected.c
targets/basic03_branch_merge/: basic03_branch_merge.h  unprotected.c
targets/complex01_function_call/: complex01_function_call.h  unprotected.c
targets/complex02_loop/: complex02_loop.h  unprotected.c
targets/dummy/: dummy.h  unprotected.c
targets/secure_boot/: secure_boot.h  unprotected.c
targets/state_transition/: state_transition.h  unprotected.c
